--- a/Index.css
+++ b/Index.css
@@ -14,7 +14,7 @@ body{
 
 /* //----------------------HEADER----------------------// */
 header{
-    position: sticky;
+    position: fixed;
     top: 0;
     display: flex;
     justify-content: center;
