--- a/Dashboard/Dashboard.css
+++ b/Dashboard/Dashboard.css
@@ -1,3 +1,53 @@
 *{
     box-sizing: border-box;
 }
+
+.generalInfoContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 900px;
+    height: 300px;
+    margin: 30px;
+    background-color: aquamarine;
+}
+
+.infoCardContainer{
+    width: 25%;
+    height: 100%;
+    background-color: chocolate;
+}
+
+.graphicsContainer{
+    width: 75%;
+    height: 100%;
+    background-color: blueviolet;
+}
+
+.imgContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60%;
+    background-color: yellow;
+}
+
+.imgProfile{
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    background-color: blueviolet;
+}
+
+.socialMediaContainer{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color:turquoise;
+
+}
