--- a/Index.css
+++ b/Index.css
@@ -69,6 +69,7 @@ header{
     height: 28px;
     border-radius: 50px;
     border: none;
+    flex-shrink: 0;
     background-color: rgb(137, 221, 206);
     background: linear-gradient(rgb(137, 221, 206), rgb(39, 198, 226));
 }
