--- a/Dashboard/Dashboard.css
+++ b/Dashboard/Dashboard.css
@@ -71,6 +71,8 @@
     min-width: 900px;
     height: 250px;
     border: solid black 2px;
+    overflow-x:scroll;
+    overflow-y: hidden;
 }
 
 .movieContainer{
