--- a/OOP-draft/OOP-draft.css
+++ b/OOP-draft/OOP-draft.css
@@ -278,6 +278,7 @@ li:hover{
 }
 
 .littleIconMenu{
+    position: relative;
     width: 100%;
     height: 100%;
     border-radius: 50px;
@@ -286,7 +287,7 @@ li:hover{
 }
 
 .dropdownMenuContainer{
-    /* position: relative; */
+    position: absolut;
     top: -3px;
     left: 5px;
     /* display: inline-block; */
