--- a/Index.css
+++ b/Index.css
@@ -1,3 +1,9 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body{
     box-sizing: border-box;
     display: flex;
@@ -10,6 +16,8 @@ body{
     background-repeat:no-repeat;
     background-size: cover;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 /* //----------------------HEADER----------------------// */
@@ -21,8 +29,8 @@ header{
     align-items: center;
     width: 100%;
     height: 50px;
-    background-color: rgba(57, 64, 70, 0.9);
-    z-index: 1;
+    background-color: rgb(57, 64, 70);
+    z-index: 100;
 }
 
 .sub-header{
@@ -142,19 +150,19 @@ li:hover{
 
 .main-Home-grid-container{
     display: grid;
-    margin: 50px 0 50px 0;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto;
-    row-gap: 30px;
+    justify-content: center;
+    margin: 50px 0;
+    padding: 0 50px;
+    grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
+    grid-gap: 30px;
     column-gap: 30px;
-    width: 80%;
-    height: 100%;
+    width: 100vw;
 }
 
 .movie-grid-container{
     display: flex;
     flex-direction: column;
-    justify-items: center;
+    justify-self: center;
     width: 265px;
     height: 440px;
     /* border: rgb(255, 255, 255) solid 2px; */
@@ -171,6 +179,7 @@ li:hover{
     border-radius: 5px;
     border: rgb(255, 255, 255) solid 2px;
     position: relative;
+    cursor: pointer;
 }
 
 .figcaptionContainer{
@@ -185,17 +194,19 @@ li:hover{
     width: 100%;
     border-radius: 5px;
     background: rgba(0, 0, 0, 0.727);
-    opacity: 0;
+    opacity: 0;    
+    transition: 0.8s;
 }
 .figcaptionContainer:hover{
     opacity:1;
-    transition: 0.5s;
+    
 }
 
 .contentFigcaption{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
+    text-align: justify;
     width: 90%;
     height: 80%;
     overflow: hidden;
@@ -203,7 +214,6 @@ li:hover{
     font-size: 18px;
     padding: 10px 10px 0 10px;
     margin-bottom: 0;
-    text-align: justify;
     color: rgb(233, 233, 233);
 }
 
@@ -219,18 +229,18 @@ li:hover{
     border-radius: 5px;
 }
 
-.textInsideSpanGenre{
+/* .textInsideSpanGenre{
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-}
+} */
 
-.contentGenre{
+/* .contentGenre{
     justify-content: center;
     margin: 0;
     color: white;
-}
+} */
 
 
 .littleIconContainer{
@@ -252,6 +262,7 @@ li:hover{
 }
 
 .dropdownMenuContainer{
+    display: none;
     /* position: relative; */
     top: -3px;
     left: 5px;
@@ -321,7 +332,9 @@ li:hover{
 
 
 .Action{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -333,7 +346,8 @@ li:hover{
     border-radius: 5px;
 }
 .Romance{
-    text-align: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
@@ -346,7 +360,9 @@ li:hover{
     background-color: rgb(255, 0, 0);
 }
 .Fantasy{
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -357,9 +373,25 @@ li:hover{
     border-radius: 5px;
     background-color: chartreuse;
 }
+.Family{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 12px;    
+    width: 70px;
+    height: 20px;
+    border-radius: 5px;
+    margin: 0 3px;
+    padding: 0;
+    background-color: rgb(140, 232, 255);
+}
 .Documentary{
     display: flex;
-    text-align: center;
+    flex: 0.5;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;
@@ -371,7 +403,9 @@ li:hover{
     padding: 0;
 }
 .Comedy{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -383,7 +417,9 @@ li:hover{
     background-color: rgb(253, 255, 140);
 }
 .Drama{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -394,20 +430,10 @@ li:hover{
     padding: 0;
     background-color: rgb(255, 140, 251);
 }
-.Family{
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 12px;    
-    width: 70px;
-    height: 20px;
-    border-radius: 5px;
-    margin: 0 3px;
-    padding: 0;
-    background-color: rgb(140, 232, 255);
-}
 .Music{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -418,9 +444,11 @@ li:hover{
     padding: 0;
     background-color: rgb(156, 179, 249);
 }
-.Crime{
+.Crime{    
     color: whitesmoke;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -433,7 +461,9 @@ li:hover{
 }
 .Thriller{
     color: whitesmoke;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -446,7 +476,9 @@ li:hover{
 }
 .Mystery{
     color: whitesmoke;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -459,7 +491,9 @@ li:hover{
 }
 .Animation{
     color: whitesmoke;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -472,7 +506,9 @@ li:hover{
 }
 .Horror{
     color: whitesmoke;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -485,7 +521,9 @@ li:hover{
 }
 .Adventure{
     color: whitesmoke;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
@@ -497,7 +535,9 @@ li:hover{
     background-color: rgb(255, 252, 203);
 }
 .ScienceFiction{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;    
