--- a/Index.css
+++ b/Index.css
@@ -33,14 +33,6 @@ header{
     z-index: 100;
 }
 
-.sub-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 90%;
-    height: 80%;
-}
-
 .sub-header-LogoContainer{
     display: flex;
     justify-content: center;
@@ -48,6 +40,7 @@ header{
     width: 20%;
 }
 
+/* Search Container */
 .sub-header-SearchContainer{
     display: flex;
     justify-content: center;
@@ -55,8 +48,51 @@ header{
     width: 60%;
 }
 
+.formContainer{
+    width: 80%;
+}
+
+@media screen and (max-width: 600px) {
+    body {
+      background-color: lightgreen;
+    }
+
+    header{
+        position: sticky;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        background-color: rgb(57, 64, 70);
+        z-index: 100;
+    }
+.sub-header-LogoContainer{
+    display: flex;
+    height: 100%;
+    margin: 10px 0;
+}
+
+    .formContainer{
+        width: 80%;
+        margin: 10px 0;
+    }
+
+    .sub-header-MenuContainer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 20%;
+        height: 100%;
+        margin: 10px 0;
+    }
+  }
+
 .searchForm{
-    width: 400px;
+    width: 100%;
     height: 30px;
     border-radius: 50px;
     border: none;
@@ -88,6 +124,7 @@ header{
     top: 1px;
     color: rgb(58, 58, 58);
 }
+
 
 .sub-header-MenuContainer{
     display: flex;
@@ -127,7 +164,7 @@ li{
     font-size: 16px;
     font-family: 'roboto';
     font-weight: 600;
-    letter-spacing: 0.5px;; 
+    margin: 0 5px;
 }
 
 a{
@@ -144,9 +181,8 @@ li:hover{
     cursor: pointer;
 }
 
+/* //----------------------END HEADER----------------------// */
 
-
-/* //----------------------HEADER----------------------// */
 
 .main-Home-grid-container{
     display: grid;
