--- a/Index.css
+++ b/Index.css
@@ -28,7 +28,7 @@ header{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 50px;
+    height: 10vh;
     background-color: rgb(57, 64, 70);
     z-index: 100;
 }
@@ -37,7 +37,13 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 15%;
+    height: 100%;
+}
+
+.logoHeader{
+    height: 100%;
+    width: 100%;
 }
 
 /* Search Container */
@@ -70,14 +76,29 @@ header{
         background-color: rgb(57, 64, 70);
         z-index: 100;
     }
-.sub-header-LogoContainer{
-    display: flex;
-    height: 100%;
-    margin: 10px 0;
-}
+    .sub-header-LogoContainer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 25%;
+        height: 100%;
+        margin: 10px 0;
+    }
+    
+    .logoHeader{
+        height: 100%;
+        width: 100%;
+    }
+
+    .sub-header-SearchContainer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+    }
 
     .formContainer{
-        width: 80%;
+        width: 100%;
         margin: 10px 0;
     }
 
@@ -116,6 +137,7 @@ header{
     flex-shrink: 0;
     background-color: rgb(137, 221, 206);
     background: linear-gradient(rgb(137, 221, 206), rgb(39, 198, 226));
+    cursor: pointer;
 }
 
 .material-symbols-outlined{
