--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 0px 0px 8px 0px;
-    background: red;
+    background: purple;
     /* background: linear-gradient(rgb(46, 46, 46), rgb(113, 113, 113)); */
     background-position: center;
     background-repeat:no-repeat;
