--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 0px 0px 8px 0px;
-    background: purple;
-    /* background: linear-gradient(rgb(46, 46, 46), rgb(113, 113, 113)); */
+    background: linear-gradient(rgb(46, 46, 46), rgb(113, 113, 113));
     background-position: center;
     background-repeat:no-repeat;
     background-size: cover;
